--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -43,13 +43,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timerSeek" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imageView"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginStart="17dp"
         android:layout_marginLeft="17dp"
-        android:layout_marginTop="98dp"
+        android:layout_marginTop="150dp"
         android:layout_marginEnd="262dp"
         android:layout_marginRight="262dp"
         android:layout_marginBottom="152dp"
@@ -60,13 +60,13 @@
         app:layout_constraintTop_toBottomOf="@+id/timerText"
         app:srcCompat="@android:drawable/ic_media_play" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imageButton"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginStart="148dp"
         android:layout_marginLeft="148dp"
-        android:layout_marginTop="98dp"
+        android:layout_marginTop="150dp"
         android:layout_marginEnd="17dp"
         android:layout_marginRight="17dp"
         android:layout_marginBottom="152dp"
@@ -76,5 +76,21 @@
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/timerText"
         app:srcCompat="@android:drawable/ic_media_pause" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:progressBarStyleHorizontal"
+        android:progress="100"
+        android:layout_width="314dp"
+        android:layout_height="358dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginLeft="43dp"
+        android:layout_marginTop="212dp"
+        android:layout_marginBottom="161dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:progressDrawable="@drawable/circular"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
